añadi archivo planning e imagenes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <title>Ejercicio Github</title>
 </head>
 <body>
-
+<nav >
+  <ul>
+    <li><a href="planning.html">Planning</a></li>
+     </ul>
+</nav>
 <p>
 Nombre: July Maribel Rodríguez Martínez</br>
 Programa:     Ingeneria de Sistemas</br>
