Modificaciones index, vreación de nuvas páginas segun lo querido para la entrega

--- a/autor.html
+++ b/autor.html
@@ -107,7 +107,7 @@
   </div>
   <img src="img//Optimizacion720.jpg" alt="css" width="1333">
   <hr>
-  <section style="width: 70%; float: left;">
+  <section >
     <article name="Autor" id="autor">
       <h2 style="color:#005a83;text-decoration:underline;">Autor</h2>
      
@@ -133,11 +133,8 @@
       <img src="img//autor.jpg" alt="css" class="imgperfil">
     </article>
   </section>
-  <section style="max-height: 450px;width: 30%; overflow-y: scroll; ">	
-   
-    <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </section>
- 
+
+
 
 </body>
 </html>
