--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scate=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <title>Propiedades básica de CSS</title>
   <style>
 
@@ -137,7 +138,7 @@
     <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </section>
   <hr>
-  <section > 
+  <section style="width: 80%; float: left;">
     <article name="concept" id="concept1">
       <h2 style="color:#005a83;text-decoration:underline;">Conceptos</h2>
       <h3 >Propiedades de texto</h3>
@@ -191,7 +192,12 @@
         Para más información visite la página <a style="color:#005a83;text-decoration:underline;" href="http://www.w3schools.com/css/css_text.asp" title="CSS Text">w3schools.com CSS Text.</a>
       </p>
     </article>
+  </section>
       <hr>
+      <section style="max-height: 450px;width: 20%; overflow-y: scroll; ">	
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="es_ES" data-type="vertical" data-theme="dark" data-vanity="july-rodriguez-martínez-51171979"><a class="LI-simple-link" href='https://co.linkedin.com/in/july-rodriguez-mart%C3%ADnez-51171979?trk=profile-badge'>July Rodriguez Martínez</a></div>
+
+      </section>
       <article name="concept" id="concept2">
       <h3 >Propiedades de lista</h3>
       <table class='center'>
