--- a/recurso2.html
+++ b/recurso2.html
@@ -103,15 +103,12 @@
   </div>
   <img src="img//Optimizacion720.jpg" alt="css" width="1333">
   <hr>
-  <section style="width: 70%; float: left;">
+  <section >
     <article name="Video1" id="Video1">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/c9rouZoRgsw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
     </article>
   </section>
-  <section style="max-height: 450px;width: 30%; overflow-y: scroll; ">	
-   
-    <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </section>
+ 
  
 
 </body>
