tercera entrega Diseño web

--- a/autoevaluacion.html
+++ b/autoevaluacion.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
+  <meta name="author" content="July Rodríguez M.">
+  <meta name="description" content="autoevaluacion css crucigrama">
+  <meta name="Keywords" content="tutorial,C++,Diseño Web"/>
   <meta name="viewport" content="width=device-width, initial-scate=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Propiedades básica de CSS</title>
@@ -95,17 +98,19 @@
       </li>
       <li><a href="">Autoevaluación</a>
         <ul>
-          <li><a href="autoevaluacion.html">Proximamente</a></li>
-          <li><a href="autoevaluacion.html">Proximamente</a></li>
+          <li><a href="autoevaluacion.html">Crucigrama</a></li>
+          <li><a href="autoevaluacion1.html">Test CSS</a></li>
+          <li><a href="evaluacion.html">Evaluación</a></li>
         </ul></li>
         <li><a href="autor.html">Autor</a></li>
     </ul>
   </div>
   <img src="img//Optimizacion720.jpg" alt="css" width="1333">
   <hr>
+  <section>
  
-
- 
+    <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7734207-css_principios_basicos.html"></iframe>
+ </section>
 
 </body>
 </html>
