--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
   <meta name="author" content="July Rodríguez M.">
-  <meta name="description" content="video css ">
+  <meta name="description" content="autoevaluacion css test">
   <meta name="Keywords" content="tutorial,C++,Diseño Web"/>
   <meta name="viewport" content="width=device-width, initial-scate=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -100,19 +100,17 @@
         <ul>
           <li><a href="autoevaluacion.html">Crucigrama</a></li>
           <li><a href="autoevaluacion1.html">Test CSS</a></li>
-          <li><a href="evaluacion.html">Evaluación</a></li>
         </ul></li>
         <li><a href="autor.html">Autor</a></li>
     </ul>
   </div>
   <img src="img//Optimizacion720.jpg" alt="css" width="1333">
   <hr>
-  <section >
-    <article name="Video1" id="Video1">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/_0uPMvTla2o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
-    </article>
-  </section>
-  
+  <section>
+ 
+    <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7734656-autoevaluacion_css.html"></iframe>
+ </section>
+
  
 
 </body>
