--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
+  <meta name="author" content="July Rodríguez M.">
+  <meta name="description" content="inicio css ">
+  <meta name="Keywords" content="tutorial,C++,Diseño Web"/>
   <meta name="viewport" content="width=device-width, initial-scate=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
@@ -102,8 +105,9 @@
       </li>
       <li><a href="">Autoevaluación</a>
           <ul>
-            <li><a href="autoevaluacion.html">Proximamente</a></li>
-            <li><a href="autoevaluacion.html">Proximamente</a></li>
+            <li><a href="autoevaluacion.html">Crucigrama</a></li>
+            <li><a href="autoevaluacion1.html">Test CSS</a></li>
+            <li><a href="evaluacion.html">Evaluación</a></li>
       </ul></li>
        
       <li><a href="autor.html">Autor</a></li>
@@ -138,7 +142,7 @@
     <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </section>
   <hr>
-  <section style="width: 80%; float: left;">
+  <section >
     <article name="concept" id="concept1">
       <h2 style="color:#005a83;text-decoration:underline;">Conceptos</h2>
       <h3 >Propiedades de texto</h3>
