--- a/recurso2.html
+++ b/recurso2.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
+  <meta name="author" content="July Rodríguez M.">
+  <meta name="description" content="video css ">
+  <meta name="Keywords" content="tutorial,C++,Diseño Web"/>
   <meta name="viewport" content="width=device-width, initial-scate=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Propiedades básica de CSS</title>
@@ -95,8 +98,9 @@
       </li>
       <li><a href="">Autoevaluación</a>
         <ul>
-          <li><a href="autoevaluacion.html">Proximamente</a></li>
-          <li><a href="autoevaluacion.html">Proximamente</a></li>
+          <li><a href="autoevaluacion.html">Crucigrama</a></li>
+          <li><a href="autoevaluacion1.html">Test CSS</a></li>
+          <li><a href="evaluacion.html">Evaluación</a></li>
         </ul></li>
         <li><a href="autor.html">Autor</a></li>
     </ul>
