--- a/planning.html
+++ b/planning.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Propiedades básica de CSS</title>
-<meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
+<meta http-equiv="Content-Type" content="text/html" />
+  <meta charset="UTF-8" />
 </head>
 <body>
 
