--- a/autoevaluacion.html
+++ b/autoevaluacion.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html" />
+  <meta charset="UTF-8" />
   <meta name="author" content="July Rodríguez M.">
   <meta name="description" content="autoevaluacion css crucigrama">
   <meta name="Keywords" content="tutorial,C++,Diseño Web"/>
